--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,24 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+body, html, #root, .container-fluid, .container, #shell, #spa-shell-main-nav, #spa-shell-main-content {
+   height: 100%;
+   overflow:auto;
+}
+
+#spa-shell-header {
+  width:100%;
+  /*height: 10%;*/
+  padding: 10px;
+}
+
+#spa-shell-main {
+/*height:85%;*/
+height:10em;
+background: #ddd;
+}
+
+#spa-shell-foot {
+/*height : 5%;*/
+}
