--- a/client/src/Components/SubComponents/FlexLayout.css
+++ b/client/src/Components/SubComponents/FlexLayout.css
@@ -5,10 +5,11 @@
 }
 
 #menu-container > div {
-  border-width: 1px;
+  /*border-width: 1px;*/
   height:100%;
-  border-color: #c4d0dd;
-  border-style: solid;
+  /*border-color: #c4d0dd;
+  border-style: solid;*/
+  margin: 0 0 0 10px;
   /*text-align: center;
   line-height: 75px;
   font-size: 30px;*/
