--- a/client/src/Components/Header.css
+++ b/client/src/Components/Header.css
@@ -1,8 +1,13 @@
 .dropdown {
-  margin-right: 6em;
+  /* margin-right: 6em; */
 }
+
+/* .dropdown-toggle::after {
+    display:none
+} */
 
 .dropdown-menu {
   padding: 1em;
-  width:200px;
+  width:230px;
+  left: -140px;
 }
